@@ -1,34 +1,22 @@
 plugins {
-    id 'application'
     id 'launcher.java-build' //todo пока что, потом убрать так как будет clojure
     id 'launcher.version-management'
 }
 
 repositories {
     mavenCentral()
+    maven { url = 'https://repo.bb1.fun/releases' }
 }
 
 dependencies {
-    implementation project(':core')
-    implementation project(':http-client')
     implementation project(':events')
+    implementation project(':dtos')
 
     implementation "com.google.inject:guice:$guiceVer"
 
     compileOnly "org.projectlombok:lombok:$lombokVer"
     annotationProcessor "org.projectlombok:lombok:$lombokVer"
 }
-
-application {
-    mainClass = "ru.videmanmc.launcher.gui.Launcher"
-    applicationDefaultJvmArgs = ['-XX:+EnableDynamicAgentLoading']
-}
-
-shadowJar {
-    archiveBaseName.set("launcher")
-}
-
-tasks.withType(Tar).configureEach { it.enabled = false }
 
 tasks.withType(ProcessResources).configureEach {
     filesMatching("info.properties") {
